# Socials-Integration

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
include/: events.hpp  provider.hpp  source.hpp  struct.hpp
lib/steamworks/: README.md
resources/: invite-button.psd  steam-icon.psd
src/: InviteManager.cpp  InviteManager.hpp  LoadLevelPopup.cpp  LoadLevelPopup.hpp  events.cpp  main.cpp
src/hooks/: LevelInfoLayer.cpp  LevelInfoLayer.hpp  MenuLayer.cpp  MenuLayer.hpp
src/providers/steam/: steam.cpp  steamapi.cpp  steamapi.hpp
src/rooms/: globed.cpp
src/sources/: level.cpp
src/ui/: FriendCell.cpp  FriendCell.hpp  InviteListingPopup.cpp  InviteListingPopup.hpp
